--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,5 +1,22 @@
 <h2>This is the search view.</h2>
 
-<p>
-  {{ so }}
+<div> {{events11}} </div>
+<ul class="search-event-list" ng-show="hasTickets">
+  <li ng-repeat="event in events">
+    <a ng-href="http://www.stubhub.com/{{event.eventUrl}}">
+      <p>
+        <img src="{{event.imageUrl}}" width="50" height="25" />
+
+        {{event.name}}, {{event.ticketInfo.minPrice | currency}}, {{event.ticketInfo.totalTickets}}, {{event.eventDateLocal | date: 'EEE, MMM dd, yyyy'}}
+      </p>
+    </a>
+  </li>
+</ul>
+
+<p ng-hide="hasTickets" class="">
+  No tickets found.
 </p>
+
+<button>
+  Loading more...
+</button>
