a little enhance to pagination, add language switch placeholder.

--- a/app/views/directives/sh-pagination.html
+++ b/app/views/directives/sh-pagination.html
@@ -2,6 +2,10 @@
 
   <li class="arrow"><a ng-href="{{vo.pp.url}}">&laquo;</a></li>
 
+  <li><a ng-href="{{vo.fp.url}}" ng-cloak>{{vo.fp.num}}</a></li>
+
+  <li class="unavailable">&hellip;</li>
+
   <li ng-repeat="p in vo.pages" ng-class="vo.isCurrentPage(p)">
     <a ng-href="{{p.url}}" >{{p.num}}</a>
   </li>
