--- a/app/views/search.html
+++ b/app/views/search.html
@@ -24,6 +24,6 @@
     </li>
   </ul>
 
-  <div sh-pagination total-count="data.numFound" page-size="pageSize"></div>
+  <div sh-pagination total-count="data.numFound"></div>
 
 </div>
