set up ng-translation

--- a/app/views/home.html
+++ b/app/views/home.html
@@ -1,7 +1,7 @@
 <div class="center-row">
   <form action="/search/">
     <div class="row collapse">
-        <input type="text" class="dream-search" placeholder="Search your favorite tickets" name="q">
+        <input type="text" class="dream-search" placeholder="{{ 'search_placeholder' | translate}}" name="q">
     </div>
   </form>
 </div>
