--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,4 +1,4 @@
-<h2>This is the search view.</h2>
+<h2>{{ 'search_view_title' | translate }}</h2>
 
 <p>
   <ng-pluralize count="data.numFound"
@@ -14,8 +14,6 @@
     <li ng-repeat="event in data.events">
       <a ng-href="http://www.stubhub.com/{{event.eventUrl}}">
         <p>
-          <!--
-          -->
           <img ng-src="{{event.imageUrl}}" width="50" height="25" />
 
           {{event.name}}, {{event.ticketInfo.minPrice | currency}}, {{event.ticketInfo.totalTickets}} tickets, {{event.eventDateLocal | date: 'EEE, MMM dd, yyyy'}}
