--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,11 +1,7 @@
 <h2>{{ 'search_view_title' | translate }}</h2>
 
-<p>
-  <ng-pluralize count="data.numFound"
-                when="{'0': 'No tickets found.',
-                'one': '1 ticket found.',
-                'other': '{} tickets found.'}">
-  </ng-pluralize>
+<p ng-show="data">
+  {{ 'ticket_found' | translate:"{NUM: data.numFound}":"messageformat" }}
 </p>
 
 <div ng-if="data.numFound">
