a little enhancement of pluralization.

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,7 +1,7 @@
 <h2>{{ 'search_view_title' | translate }}</h2>
 
 <p ng-show="data">
-  {{ 'ticket_found' | translate:"{NUM: data.numFound}":"messageformat" }}
+  {{ 'ticket_found' | translate:"{NUM: data.numFound}" }}
 </p>
 
 <div ng-if="data.numFound">
