handle zero case; use plural format syntax.

--- a/app/views/directives/sh-pagination.html
+++ b/app/views/directives/sh-pagination.html
@@ -1,4 +1,4 @@
-<ul class="pagination">
+<ul class="pagination" ng-if="vo.tp.num >= 1">
 
   <li class="arrow"><a ng-href="{{vo.pp.url}}">&laquo;</a></li>
 
