--- a/app/views/search.html
+++ b/app/views/search.html
@@ -1,10 +1,10 @@
 <h2>{{ 'search_view_title' | translate }}</h2>
 
-<p ng-show="data">
+<p ng-if="data.numFound >= 0">
   {{ 'ticket_found' | translate:"{NUM: data.numFound}" }}
 </p>
 
-<div ng-if="data.numFound">
+<div ng-if="data">
 
   <ul class="search-event-list">
     <li ng-repeat="event in data.events">
