seo friendly URL

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -27,7 +27,7 @@
         </span>
 
         <p style="margin-top: 20px;">
-          <a ng-href="/event/{{event.eventUrl}}" class="event-name">
+          <a ng-href="{{eventUrl(event)}}" class="event-name">
             {{event.name}}
           </a>
         </p>
