add event detail page

--- a/app/views/search.html
+++ b/app/views/search.html
@@ -18,7 +18,7 @@
             <span>{{event.eventDateLocal | date: 'MMM'}}</span>
             <span>{{event.eventDateLocal | date: 'dd'}}</span>
             <span>{{event.eventDateLocal | date: 'yyyy'}}</span>
-            <span>Starts:  {{event.eventDateLocal | date: 'mm:ss a'}}</span>
+            <span>Starts:  {{event.eventDateLocal | date: 'hh:mm a'}}</span>
           </span>
         </a>
 
