--- a/app/views/event.html
+++ b/app/views/event.html
@@ -2,6 +2,7 @@
 
 <section class="row event-detais" style="border: 1px solid #C0C0C0;">
   <p>{{ event.description }}</p>
+  <p>{{ event.eventDateLocal | date: 'MMM dd yyyy' }}</p>
   <p>{{ event.eventDateLocal | date: 'hh:mm a' }} at {{event.venue.name}}</p>
   <p>{{event.venue.city}} {{event.venue.state}}</p>
 </section>
